--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,8 @@
     height: 100%;
     display: block;
 }
+.category ul a{
+}
 .category ul li{
     float: left;
     width: 25%;
@@ -95,15 +97,24 @@
 /*特价页面开始*/
 .onsale{
     width: 100%;
+    border-bottom: 2px solid #F5F5F5;
+    padding: 5px 10px;
 }
 .onsale ul{
     width:100%;
 }
 .onsale ul li {
     width: 100%;
+    padding: 5px 5px;
 }
 .onsale .onsale_left{
     width: 20%;
+}
+.onsale .onsale_left{
+    width: 15%;
+    max-height: 100px;
+    line-height: 100px;
+    margin-left:3%;
 }
 .onsale .onsale_right{
     margin-left: 10%;
