--- a/css/index.css
+++ b/css/index.css
@@ -121,3 +121,47 @@
     width: 70%
 }
 /*特价页面结束*/
+
+
+/*底部链接开始*/
+/*页脚部分*/
+.mmm_footer{
+    width: 100%;
+    background: #fff;
+    margin-top: 10px;
+    display: block;
+    padding-bottom: 20px;
+}
+.mmm_footer .message{
+    width: 100%;
+    height: 40px;
+    margin-top: 40px;
+    background-color: #F5F5F5;
+    border-top: 1px solid darkgrey;
+    border-bottom: 1px solid darkgrey;
+    margin-bottom: 10px;
+}
+.mmm_footer .message a{
+    display: inline-block;
+    width: 32%;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-right: 1px solid darkgray;
+}
+.mmm_footer .message a:last-child{
+    border: 0px solid #000;
+}
+.mmm_footer p{
+    text-align: center;
+}
+.mmm_footer .app{
+    color: red;
+}
+.mmm_footer .stage{
+    color: grey;
+}
+.mmm_footer #back{
+    cursor:pointer;
+}
+/*底部链接结束*/
